--- a/style.css
+++ b/style.css
@@ -29,7 +29,10 @@ body {
 .menu a:hover {
   text-decoration: underline;
 }
-.logo img {
+.site-header .logo img {
   height: 60px;
+  width: auto;
+  max-height: 60px;
   display: block;
 }
+
