--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   background-color: #ffffff;
-  background-image: url("background.jpg"); /* Make sure this file is uploaded */
+  background-image: url("background.png"); /* Make sure this file is uploaded */
   background-size: cover;
   background-repeat: repeat;
   color: #222;
@@ -132,4 +132,17 @@ body {
   #filter-menu {
     justify-content: center;
   }
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("background.png");
+  background-size: cover;
+  background-repeat: repeat;
+  opacity: 20; /* ← adjust this number for more/less transparency */
+  z-index: -1;
 }
