--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body::before {
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 3rem;
+  gap: 5rem;
   margin-top: 3rem;
 }
 
@@ -106,7 +106,6 @@ body::before {
   align-items: center;
   text-align: center;
   width: 100%;
-  max-width: 100%;
   text-decoration: none;
   color: inherit;
   transition: transform 0.2s ease;
@@ -114,6 +113,10 @@ body::before {
 
 .project-thumb:hover {
   transform: scale(1.07);
+}
+
+.project-thumb:hover p {
+  color: #4c59e3;
 }
 
 .project-thumb img {
