--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ body::before {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100%;
   text-decoration: none;
   color: inherit;
   transition: transform 0.2s ease;
@@ -115,15 +114,10 @@ body::before {
   transform: scale(1.07);
 }
 
-.project-thumb:hover p {
-  color: #4c59e3;
-}
-
 .project-thumb img {
   width: 100%;
   height: auto;
   object-fit: cover;
-  border-radius: 0;
   aspect-ratio: 5 / 4.5;
 }
 
@@ -132,3 +126,11 @@ body::before {
   font-size: 0.9rem;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+}
+
